--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     
     <h1>World!</h1>
-    <script src="js/index.js"></script>
+    <script src="js/index1.js"></script>
 </body>
 </html>
