--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>The Result of calculations is going to be shown down here</h1>
+    <h1>The Result of calculations</h1>
     <script src="js/index1.js"></script>
 </body>
 </html>
